syntax: consecutive string literals.
	* src/parser/ugrammar.y: Support consecutive string literals.
	* doc/RELEASE-NOTES.txt: Doc it.
	* doc/specs/lang.tex: Document it.
	Document all the escapes sequences.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -52,6 +52,7 @@ urbiScript
 ==========
 
 New constructs:
+
 - every|
 
 - break and continue are supported in "every|" loops.
@@ -70,6 +71,9 @@ New constructs:
   in equivalent to
 
     function binList(a, b) { [a, b] } | binList(1, 2)
+
+- consecutive string literals are joined into a unique string literal,
+  as in C++.
 
 New objects:
 - Finalizable
