undocument ensupported features.
	* doc/specs/formatinfo.tex: "'" and "b".

--- a/doc/specs/formatinfo.tex
+++ b/doc/specs/formatinfo.tex
@@ -40,7 +40,7 @@ characters:
   a space before the converted string.\\
   \samp{0} & Pad with 0's (inserted after sign or base indicator).\\
   \samp{\#} & Show numerical base, and decimal point.\\
-  \samp{'} & Split thousands (\samp{1 000}).\\
+%  \samp{'} & Split thousands (\samp{1 000}).\\
   \hline
 \end{tabular}
 
@@ -56,7 +56,7 @@ following:
   \samp{x} & Prints in hexadecimal lowercase \\
   \samp{X} & Prints in hexadecimal uppercase \\
   \samp{o} & Prints in octal\\
-  \samp{b} & Prints in binary\\
+ % \samp{b} & Prints in binary\\
   \samp{e} & Prints floats in scientific format\\
   \samp{E} & Prints floats in scientific format uppercase\\
   \samp{f} & Prints floats in fixed format\\
