--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -267,7 +267,7 @@ do (2) { var foo = "foo" }.properties("foo");
 [00238501] Dictionary {}
 do (2) { var foo = "foo" ; foo->bar = "bar" }.properties("foo");
 [00238502] Dictionary {"bar" => "bar"}
-\enqd{urbiscript}
+\end{urbiscript}
 
 \item \lstinline|removeProperty|\\
 
