--- a/doc/specs/singleton.tex
+++ b/doc/specs/singleton.tex
@@ -1,7 +1,7 @@
 \section{Singleton}
 
-A \lstinline{Singleton} is a prototype that cannot be cloned. All
-prototype derived of \lstinline{Singleton} are also singleton.
+A \dfn{singleton} is a prototype that cannot be cloned. All prototypes
+derived of \lstinline{Singleton} are also singletons.
 
 \subsection{Prototypes}
 \begin{itemize}
@@ -10,12 +10,14 @@ prototype derived of \lstinline{Singleton} are also singleton.
 
 \subsection{Construction}
 
-To be a singleton, the object must have \lstinline{Singleton} in his
-list of prototypes. The common way to do this is \lstinline{var s = Singleton.new},
-but this doesn't work : \lstinline|s| isn't a new singleton, it is the
-\lstinline|Singleton| itself since it cannot be cloned. There are two
-other ways :
-
+To be a singleton, the object must have \lstinline{Singleton} as a
+prototype. The common way to do this is
+%
+\lstinline{var s = Singleton.new},
+%
+but this does not work : \lstinline|s| is not a new singleton, it is
+the \lstinline|Singleton| itself since it cannot be cloned. There are
+two other ways:
 
 \begin{urbiscript}
 // Defining a new class and specifying Singleton as a parent.
@@ -28,13 +30,13 @@ var s1 = NewSingleton1.new;
 assert(s1 === NewSingleton1);
 assert(NewSingleton1 !== Singleton);
 
-// Create a new Object and set his prototype by hand.
-var NewSingleton2 = Object.New|
+// Create a new Object and set its prototype by hand.
+var NewSingleton2 = Object.new|
 var NewSingleton2.asString = "NewSingleton2"|
 NewSingleton2.protos = [Singleton]|
 var s2 = NewSingleton2.new;
 [00000001] NewSingleton2
-assert(s2 === NewSingleton1);
+assert(s2 === NewSingleton2);
 assert(NewSingleton2 !== Singleton);
 \end{urbiscript}
 
@@ -43,7 +45,7 @@ assert(NewSingleton2 !== Singleton);
 \item \lstinline|clone|\\
   Return \lstinline|this|.
 
-\item \lstinline|new'|\\
+\item \lstinline|'new'|\\
   Return \lstinline|this|.
 \end{itemize}
 
