--- a/doc/specs/regexp.tex
+++ b/doc/specs/regexp.tex
@@ -9,7 +9,7 @@ expression.
 \end{itemize}
 
 \subsection{Construction}
-\label{stdlib:tag:ctor}
+\label{stdlib:regexp:ctor}
 
 A \lstinline{Regexp} is created with the regular expression once and
 for all, and it can be used many times to match with other strings.
