doc: tutorial: custom operators.
	* doc/tutorial/flow.tex (sec:constructs/do): Rename as...
	(sec:constructs:do): this, for consistency.
	Adjust dependencies.
	* doc/tutorial/object.tex (Operators): New.
	* doc/specs/lang.tex: Fix a fixme: point to Operators.

--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -316,7 +316,7 @@ that have the same precedence. Many operators are syntactic sugar that
 bounce on a method. In this case, the equivalent desugared expression
 is shown in the ``Equivalence'' column. This can help you determine
 what method to override to define an operator for an object (see
-\fixme{autoref{sec:fixme}}).
+\autoref{sec:tut:operators}).
 
 This section defines the syntax, precedence and associativity of the
 operators. Their semantics is described in \autoref{sec:stdlib} in the
