--- a/doc/tutorial/flow.tex
+++ b/doc/tutorial/flow.tex
@@ -108,7 +108,7 @@ switch ("bar")
 \end{urbiscript}
 
 \section{do}
-\label{section:constructs/do}
+\label{section:constructs:do}
 
 A \lstinline|do| scope is a shorthand to perform several actions on an
 object.
