string: fix isDigit and others.
As was written, the loop was never checking the first character of the
string.

	* doc/specs/string.tex: Check isDigit.
	* src/object/string.cc (IS): Fix.

--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -123,9 +123,14 @@ assert("foo".fresh == "foo_6");
 \end{tabular}
 
 \begin{urbiscript}[firstnumber=last]
+assert("".isDigit);
+assert("0123456789".isDigit);
+assert(!"a".isDigit);
+
 assert("".isLower);
 assert("lower".isLower);
 assert(! "Not Lower".isLower);
+
 assert("".isUpper);
 assert("UPPER".isUpper);
 assert(! "Not Upper".isUpper);
