doc: Socket and Server.
	* doc/specs/server.tex: New.
	* doc/specs/socket.tex: New.
	* doc/specs/stdlib.tex: add files above.

--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -30,7 +30,9 @@
 \input{specs/pattern}
 \input{specs/primitive}
 \input{specs/regexp}
+\input{specs/server}
 \input{specs/singleton}
+\input{specs/socket}
 \input{specs/string}
 \input{specs/system}
 \input{specs/system/platform}
