doc: more stubs.
	* doc/specs/global.tex, doc/specs/system.tex: here.

--- a/doc/specs/global.tex
+++ b/doc/specs/global.tex
@@ -2,6 +2,11 @@
 
 \fixme{Lots of work to do here.}
 
+\subsection{Prototypes}
+\begin{itemize}
+\item \refObject{System}
+\end{itemize}
+
 \subsection{Methods}
 %\begin{itemize}
 %\end{itemize}
