--- a/doc/tutorial/functions.tex
+++ b/doc/tutorial/functions.tex
@@ -10,7 +10,8 @@ tool.
 Contrary to other languages from the \C family, scopes are
 expressions: they can be used where values are expected, just as
 \lstinline|1 + 1| or \lstinline|"foo"|.
-They evaluate to the value of their last expression, or void if they're
+They evaluate to the value of their last expression, or
+\lstinline|void| if they are
 empty. The following listing illustrates the use of scopes as
 expressions. Note that the last semicolon inside a scope is optional.
 
@@ -29,7 +30,7 @@ Scopes can be nested. Variables can be redefined in sub-scopes. In
 this case, the inner variables hide the outer ones, as illustrated
 below.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 var x = 0;   // Define the outer x.
 [00000000] 0
 {
@@ -56,7 +57,7 @@ about anywhere. These functions' visibility are limited to the scope
 they're defined in, like variables. This enables for instance to write
 local helper functions like ``max2'' in the example belox.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 function max3(a, b, c) // Max of three values
 {
   function max2(a, b)
@@ -77,7 +78,7 @@ function. \us supports lexical closure: functions can refer to outer
 local variables, as long as they are visible (in scope) from where
 the function is defined.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 function printSalaries(rate)
 {
   var charges = 100;
@@ -99,24 +100,24 @@ printSalaries(15);
 Closures can also write to captured variables, as shown below.
 
 % Fixme: these are not actually closures because of the toplevel ...
-\begin{urbiscript}
-var x = 0;
+\begin{urbiscript}[firstnumber=last]
+var a = 0;
 [00000000] 0
-var y = 0;
+var b = 0;
 [00000000] 0
 function add(n)
 {
   // x and y are updated by closure
-  x += n;
-  y += n;
+  a += n;
+  b += n;
   void
 } | {};
 add(25);
 add(25);
 add(1);
-x;
+a;
 [00000000] 51
-y;
+b;
 [00000000] 51
 \end{urbiscript}
 
